--- a/gentoo_config.cfg
+++ b/gentoo_config.cfg
@@ -24,7 +24,7 @@ EFI_SIZE="1G"
 
 
 #Timezone 
-TIMEZONE="Europe/Berlin"
+TIMEZONE="Europe/Istanbul"
 
 
 #Create Root Password
@@ -76,7 +76,7 @@ KEYMAP="US"
 
 #KERNEL INSTALL
 KERINST=" emerge sys-kernel/linux-firmware
-          emerge sys-kernel/gentoo-kernel-bin
+          emerge sys-kernel/gentoo-kernel
           eselect kernel set 1"
 
 
